--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     </div>
                 </div>
             </section>
-            <button>
-                <a href="" class="Logout">Logout</a>
+            <button class="logout-btn">
+               <a href="" class="Logout">Logout</a>
             </button>
         </main>
     </div>
