--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </section>
             <button class="logout-btn">
-               <a href="" class="Logout">Logout</a>
+               <a href="login.html" class="Logout">Logout</a>
             </button>
         </main>
     </div>
