--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             </div>
         </header>
         <nav class="dashboard-nav">
-            <button onclick="window.location.href='book.html'">Book Transport</button>
-            <button onclick="window.location.href='bookings.html'">My Bookings</button>
+            <button onclick="window.location.href='booking.html'">Book Transport</button>
+            <button onclick="window.location.href='booking.html'">My Bookings</button>
             <button onclick="window.location.href='profile.html'">Profile</button>
         </nav>
         <main class="dashboard-main">
