--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <nav class="dashboard-nav">
             <button onclick="window.location.href='booking.html'">Book Transport</button>
-            <button onclick="window.location.href='booking.html'">My Bookings</button>
+            <button onclick="window.location.href='data-disppllay.js'">My Bookings</button>
             <button onclick="window.location.href='profile.html'">Profile</button>
         </nav>
         <main class="dashboard-main">
