--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="dashboard-container">
         <header class="dashboard-header">
-            <h1>Student Transport Dashboard</h1>
+            <h1>Student Transport</h1>
             <div class="user-info">
                 <span>Welcome, User</span>
             </div>
@@ -28,7 +28,7 @@
                         <p>No rides booked</p>
                     </div>
                     <div class="card">
-                        <h3>Total Bookings</h3>
+                        <h3>Bookings History</h3>
                         <p>0</p>
                     </div>
                     <div class="card">
