--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </section>
-            <button class="logout-btn">
+            <button class="logout">
                <a href="login.html" class="Logout">Logout</a>
             </button>
         </main>
