--- a/booking.html
+++ b/booking.html
@@ -4,6 +4,7 @@
     <title>Select Location on OpenStreetMap</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+        <link rel="stylesheet" href="booking.css">
     <style>
         #map {
             height: 500px;
@@ -18,19 +19,11 @@
     </style>
 </head>
 <body>
-    <!DOCTYPE html>
-<html>
-<head>
-    <title>Select Location on OpenStreetMap</title>
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-
-    <link rel="stylesheet" href="booking.css"/>
-
-</head>
-<body>
     <h1>Select a Place on the Map (OpenStreetMap)</h1>
+    <div id="search-bar-container">
+        <input type="text" id="search-bar" placeholder="Search for a location...">
+        <button id="search-button">Search</button>
+    </div>
     <div id="map"></div>
 
     <div id="info-panel">
@@ -39,15 +32,15 @@
         <p><strong>Longitude:</strong> <span id="longitude"></span></p>
         <p><strong>Address:</strong> <span id="address"></span></p>
         <p><strong>Place Name:</strong> <span id="place-name"></span></p>
-        <p><strong>Place ID/OSM ID:</strong> <span id="osm-id"></span></p>
+        <p><strong>Place ID/OSM ID:</strong> <span id="osmr-id"></span></p>
     </div>
+
+    
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
     <script src="data-display.js"></script>
     <script src="map.js"></script>
-</body>
-</html>
 </body>
 </html>
